AUTOMAKE_OPTIONS = no-dependencies
bin_PROGRAMS = cgiaudit
cgiaudit_SOURCES = bug.c check_tags.c cgi_audit.c discard_tokens_1.c get_field_value.c get_field_name.c hexencode.c http_connect.c isolate_value.c main.c mask.c parse_a_tag.c parse_conf.c parse_doc.c parse_form_field.c parse_form_tag.c parse_input_tag.c parse_select_tag.c parse_textarea_tag.c parse_url.c report.c show_doc_info.c show_srv_info.c syntax_error.c urlcmp.c vexit.c 
man_MANS = cgiaudit.1 cgiaudit.conf.5
EXTRA_DIST = $(man_MANS) 
sysconf_DATA = cgiaudit.conf
